[build-system]
requires = ["setuptools>=38.3.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ALO_lib"
version = "1.0.1"
authors = [
  { name="MinhCreatorVN", email="buivonhatminhqwer@gmail.com" },
]
description = "All in one function you need"
readme = "README.md"
python_requires = ">=3.9"
zip_safe = false
install_requires=[]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/MinhCreator/ALO-lib-python"
"Bug Tracker" = "https://github.com/MinhCreator/ALO-lib-python/issues"
